--- a/src/newtab.html
+++ b/src/newtab.html
@@ -7,7 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div id="newtab"></div>
+		<div id="newtab-page"></div>
 		<script type="module" src="/src/features/newtab/index.ts"></script>
 	</body>
 </html>
